--- a/branches/dev-issue-15/MyNightOut/MyNightOut/src/mynightout/ui/UserMainForm.form
+++ b/branches/dev-issue-15/MyNightOut/MyNightOut/src/mynightout/ui/UserMainForm.form
@@ -33,8 +33,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="userNameLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-                              <Component id="editUserInformationButton" min="-2" pref="216" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="editUserInformationButton" min="-2" pref="251" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
